--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6,13 +6,16 @@ body {
    color: #333333;
    background-color: #F9F9F9;
    margin:0;
-   margin-top:50px;
+   
 font-family: 'Poiret One', cursive;
 font-family: 'Economica', sans-serif;
 font-family: 'Julius Sans One', sans-serif;
 font-family: 'Khand', sans-serif;
 }
 
+section{
+	padding-top: 50px;
+}
  
 /********MENU RESPONSIVE****/
 
