--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,28 +1,71 @@
-/* Generic Selectors */
- 
+
 body {
-   font-family: Georgia, "Times New Roman", Times, serif;
-   font-size: 14px;
-   color: #333333;
-   background-color: #F9F9F9;
-   margin:0;
-   
-font-family: 'Poiret One', cursive;
-font-family: 'Economica', sans-serif;
-font-family: 'Julius Sans One', sans-serif;
-font-family: 'Khand', sans-serif;
+	font-family: 'Jura', sans-serif;
+	font-size: 16px;
+	color:  #fff;
+	background-color: #5d5756;
+	margin:0;
 }
 
+/************** SECTION**************/
+
 section{
-	padding-top: 50px;
+	padding: 40px 20px 40px 20px;
+	text-align: left;
 }
- 
+
+section header {
+	width: 100%;
+	padding: 0 0%;
+	margin: 0;
+	font-family: 'Julius Sans One', sans-serif;
+}
+
+section header h2{
+	text-align: center;
+	font-size: 40px;
+}
+
+section header h3{
+	text-align: center
+}
+
+#top {
+	padding-left: 0px;
+	padding-right: 0px;
+}
+
+#top header {
+	display: table;
+	background-image: url(../img/ouverture.jpg);
+	max-width: none;
+	height: 100vh;
+	background-position: center center;
+	animation-name: popin;
+	animation-duration: 1s; 
+}
+
+/******* ARTICLE class service ********/
+
+
+/******* FOOTER ************/
+ footer {
+	float:left;
+	min-height: 50px;
+	width: 99%;
+	text-align: center;
+}
+
+footer img {
+	height: 20px;
+}
 /********MENU RESPONSIVE****/
 
 /*Strip the ul of padding and list styling*/
 nav {
 	position: fixed;
 	top: 0;
+	font-family: 'Julius Sans One', sans-serif;
 }
 
 nav ul {
@@ -32,7 +75,7 @@ nav ul {
     margin: 0;
     padding: 0;
     overflow: hidden;
-    background-color: #333;
+    background-color: #454140;
 }
 
 /*Create a horizontal list with spacing*/
@@ -45,17 +88,17 @@ nav li {
 nav li a {
 	display:block;
 	min-width:140px;
-	height: 50px;
+	height: 40px;
 	text-align: center;
-	line-height: 50px;
+	line-height: 40px;
 	color: #fff;
-	background: #333;
+	background: #454140;
 	text-decoration: none;
 }
 
 /*Hover state for top level links*/
 nav li:hover a {
-	background: #19c589;
+	background: #c1502e;
 }
 
 .nav-sm {
@@ -84,7 +127,7 @@ nav li:hover a {
 }
 
 .nav-sm img {
-		background-color: #333;
+		background-color: #4C3319;
 }
 
 /*Responsive Styles*/
