--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -110,24 +110,35 @@ nav ul {
     width: 100%;
     list-style-type: none;
     margin: 0;
-    padding: 0;
     overflow: hidden;
     background-color: #454140;
 }
 
+nav li.title {
+	display: inline-block;
+	float: left;
+	text-align: left;
+    line-height: 25px;
+}
+
+nav li.title span{
+	display: block;
+}
+
+
 /*Create a horizontal list with spacing*/
 nav li {
 	display: block;
-	float: left;
+	float: right;
 }
 
 /*Style for menu links*/
 nav li a {
 	display:block;
 	min-width:140px;
-	height: 40px;
+	height: 50px;
 	text-align: center;
-	line-height: 40px;
+	line-height: 50px;
 	color: #fff;
 	background: #454140;
 	text-decoration: none;
@@ -169,7 +180,7 @@ nav li:hover a {
 
 /*Responsive Styles*/
 
-@media screen and (max-width : 760px){
+@media screen and (max-width : 920px){
 	/*Make dropdown links appear inline*/
 	nav {
 			text-align:right;
@@ -180,7 +191,7 @@ nav li:hover a {
 		display:initial;
 	}
 	
-	.nav{
+	.nav ul{
 		display:none;
 	}
 }
