--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -11,6 +11,10 @@ body {
 	width:100%;
 }
 
+.color-text {
+	color: #E36211;
+}
+
 /**************carousel**************/
 div#slider{
 	width:100%;
@@ -57,7 +61,6 @@ section{
 
 section header {
 	width: 100%;
-	border: RED;
 	margin: 0;
 	font-family: 'Julius Sans One', sans-serif;
 }
@@ -72,17 +75,22 @@ section header h3{
 	font-size: 30px;
 }
 
+section a{
+	color: #E36211;
+}
 
 /******* ARTICLE********/
 article {
 	width: 100%;
-	border:1px solid red
+	padding: 20px;
+
 }
 
 article h3{
 	text-align: center;
 	font-size: 20px;
-	color: #c1502e;
+	height: 60px;
+	color: #E36211;
 }
 
 /******* FOOTER ************/
@@ -96,6 +104,7 @@ article h3{
 footer img {
 	height: 20px;
 }
+
 /********MENU RESPONSIVE****/
 
 /*Strip the ul of padding and list styling*/
@@ -196,7 +205,7 @@ nav li:hover a {
 	}
 }
 
-/*** RESPONSIVE GRID ****/
+/*** RESPONSIVE GRID - article ****/
 
 /* Create four equal columns that floats next to each other */
 .column {
