--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -18,13 +18,13 @@ body {
 /**************carousel**************/
 div#slider{
 	width:100%;
-	overflow:hidden;
+	overflow: hidden;
 }
 
 div#slider figure{
 	position: relative;
 	width:500%;
-	margin: 0;
+	margin: 15px;
 	padding: 0;
 	font-size: 0;
 	left:0;
@@ -79,6 +79,9 @@ section a{
 	color: #E36211;
 }
 
+section h3 {
+	color: #E36211;
+}
 /******* ARTICLE********/
 article {
 	width: 100%;
@@ -188,6 +191,8 @@ nav li:hover a {
 }
 
 /*Responsive Styles*/
+
+/*** MENU on small screen ***/
 
 @media screen and (max-width : 920px){
 	/*Make dropdown links appear inline*/
